third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/round-trip/more_nested.disassembled
//**** Cross-compiled for `masm` syntax from `tests/no-v1-comparison/closures/more_nested.move`

//# publish
// Bytecode version v8
module 0xc0ffee::n
// Function definition at index 0
fun create_adder(l0: u64): |u64||u64|u64 has copy
    move_loc l0
    pack_closure __lambda__2__create_adder, 1
    ret

// Function definition at index 1
fun create_multiplier(l0: u64): |u64||u64|u64 has copy
    move_loc l0
    pack_closure __lambda__2__create_multiplier, 1
    ret

// Function definition at index 2
fun test_composed_captures()
    local l0: |u64||u64|u64
    local l1: |u64||u64|u64
    ld_u64 2
    pack_closure __lambda__2__test_composed_captures, 1
    ld_u64 2
    pack_closure __lambda__4__test_composed_captures, 1
    pack_closure __lambda__6__test_composed_captures, 11
    // @5
    st_loc l1
    ld_u64 4
    ld_u64 3
    move_loc l1
    call_closure <|u64||u64|u64>
    // @10
    call_closure <|u64|u64>
    ld_u64 54
    eq
    br_false l0
    ret
    // @15
l0: ld_u64 0
    abort

// Function definition at index 3
fun test_nested_functions()
    local l0: |u64||u64|u64 has copy
    local l1: |u64|u64
    local l2: |u64||u64|u64
    ld_u64 10
    call create_adder
    st_loc l0
    ld_u64 5
    move_loc l0
    // @5
    call_closure <|u64||u64|u64 has copy>
    st_loc l1
    ld_u64 3
    move_loc l1
    call_closure <|u64|u64>
    // @10
    ld_u64 18
    eq
    br_false l0
    ld_u64 2
    call create_multiplier
    // @15
    st_loc l0
    ld_u64 3
    move_loc l0
    call_closure <|u64||u64|u64 has copy>
    st_loc l1
    // @20
    ld_u64 4
    move_loc l1
    call_closure <|u64|u64>
    ld_u64 24
    eq
    // @25
    br_false l1
    ld_u64 5
    ld_u64 3
    pack_closure __lambda__2__test_nested_functions, 11
    st_loc l2
    // @30
    ld_u64 2
    move_loc l2
    call_closure <|u64||u64|u64>
    st_loc l1
    ld_u64 4
    // @35
    move_loc l1
    call_closure <|u64|u64>
    ld_u64 120
    eq
    br_false l2
    // @40
    ret
l2: ld_u64 2
    abort
l1: ld_u64 1
    abort
    // @45
l0: ld_u64 0
    abort

// Function definition at index 4
fun __lambda__1__create_adder(l0: u64, l1: u64, l2: u64): u64
    move_loc l0
    move_loc l1
    add
    move_loc l2
    add
    // @5
    ret

// Function definition at index 5
fun __lambda__2__create_adder(l0: u64, l1: u64): |u64|u64
    move_loc l0
    move_loc l1
    pack_closure __lambda__1__create_adder, 11
    ret

// Function definition at index 6
fun __lambda__1__create_multiplier(l0: u64, l1: u64, l2: u64): u64
    move_loc l0
    move_loc l1
    mul
    move_loc l2
    mul
    // @5
    ret

// Function definition at index 7
fun __lambda__2__create_multiplier(l0: u64, l1: u64): |u64|u64
    move_loc l0
    move_loc l1
    pack_closure __lambda__1__create_multiplier, 11
    ret

// Function definition at index 8
fun __lambda__1__test_composed_captures(l0: u64, l1: u64, l2: u64): u64
    move_loc l0
    move_loc l1
    mul
    move_loc l2
    mul
    // @5
    ret

// Function definition at index 9
fun __lambda__2__test_composed_captures(l0: u64, l1: u64): |u64|u64
    move_loc l0
    move_loc l1
    pack_closure __lambda__1__test_composed_captures, 11
    ret

// Function definition at index 10
fun __lambda__3__test_composed_captures(l0: u64, l1: u64, l2: u64): u64
    move_loc l0
    move_loc l1
    add
    move_loc l2
    add
    // @5
    ret

// Function definition at index 11
fun __lambda__4__test_composed_captures(l0: u64, l1: u64): |u64|u64
    move_loc l0
    move_loc l1
    pack_closure __lambda__3__test_composed_captures, 11
    ret

// Function definition at index 12
fun __lambda__5__test_composed_captures(l0: u64, l1: |u64||u64|u64, l2: |u64||u64|u64, l3: u64): u64
    local l4: |u64|u64
    copy_loc l0
    move_loc l2
    call_closure <|u64||u64|u64>
    st_loc l4
    move_loc l3
    // @5
    move_loc l4
    call_closure <|u64|u64>
    move_loc l0
    move_loc l1
    call_closure <|u64||u64|u64>
    // @10
    call_closure <|u64|u64>
    ret

// Function definition at index 13
fun __lambda__6__test_composed_captures(l0: |u64||u64|u64, l1: |u64||u64|u64, l2: u64): |u64|u64
    move_loc l2
    move_loc l0
    move_loc l1
    pack_closure __lambda__5__test_composed_captures, 111
    ret

// Function definition at index 14
fun __lambda__1__test_nested_functions(l0: u64, l1: u64, l2: u64, l3: u64): u64
    move_loc l1
    move_loc l2
    mul
    move_loc l0
    mul
    // @5
    move_loc l3
    mul
    ret

// Function definition at index 15
fun __lambda__2__test_nested_functions(l0: u64, l1: u64, l2: u64): |u64|u64
    move_loc l2
    move_loc l0
    move_loc l1
    pack_closure __lambda__1__test_nested_functions, 111
    ret



//# run 0xc0ffee::n::test_nested_functions

//# run 0xc0ffee::n::test_composed_captures